2005-10-23  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Add .StopEventLoopWhenChildProcRemoved, replaces
	.addStopEventLoopOnChildProcRemovedObserver.
	* TestTerminated.java: Update.
	* TestTaskClonedObserver.java: Update.
	* TestRun.java: Update.
	* TestProcGet.java: Update.
	* TestFork.java: Update.
	* TestExiting.java: Update.
	* TestExec.java: Update.
	
	* TestTaskClonedObserver.java: Use TestLib's .AddTaskObserver, and
	TaskObserverBase.
	* TestLib.java: Add method .isDescendantOfMine.  Add classes
	AddTaskObserver, and TaskObserverBase.
	(setUp): Register any descendant process.

	* TaskState.java: Handle .processPerformTerminating in
	startRunning, and zombied states.  Do not pass the terminating
	exit status to Task .sendContinue.
	* LinuxTask.java: Always enable exit tracing.
	* Task.java: Delete .traceExit.
	
	* Task.java: Merge .performExited into .performTerminated.
	Replace .performExiting into .performTerminating.
	* LinuxHost.java: Update.
	* TaskState.java: Replace .processPerformExiting with
	.processPerformTerminating.  Merge .processPerformExited into
	.processPerformTerminated.

	* TestLib.java, LinuxHost.java: Update Wait .Observer objects so
	that .eventExit has additional signal, and coreDumped parameters,
	and .exited is merged into .terminated.

	* TaskObserver.java: Replace .Exiting with .Terminating; Merge
	.Exited into .Terminated.

2005-10-22  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Delete .taskDiscovered.
	* TaskObservable.java: Delete, merged into Proc.java.
	* TaskObserver.java: Add .Attached.
	* TaskState.java: Replace Proc .taskDiscovered, with Task
	.notifyAttached.
	* Task.java: Update; add .notifyAttached.
	
	* Observer.java: New file.
	* TaskObserver.java: Extend Observer.

	* Task.java: Delete .traceFork.
	* TestLib.java: Update.
	* LinuxTask.java: Assume fork tracing.

	* TestTaskClonedObserver.java: Rename TestClone.java.

	* TaskObserver.java: Update names, .Step to .Instruction,
	.Breakpoint to .Code.
